--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 exclude=build/
 
 [pytest]
-addopts = --doctest-modules --doctest-glob='*.rst' job_progress README.rst
+addopts = --doctest-modules --doctest-glob='*.rst' job_progress README.rst --tb=short
